// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Debug and search helpers fresh state shows default Debug Query AST 1`] = `
Object {
  "filter": Object {
    "op": "BooleanLiteral",
    "value": true,
  },
  "op": "FilterProc",
}
`;

exports[`Debug and search helpers write into main search shows Debug Query AST (update after fixing PROD-950 again and remove this clause) 1`] = `
Object {
  "filter": Object {
    "op": "BooleanLiteral",
    "value": true,
  },
  "op": "FilterProc",
}
`;

exports[`Debug and search helpers write into main search shows proper AST in Copy for curl command (update after fixing PROD-950 again and remove this clause) 1`] = `
Object {
  "dir": -1,
  "proc": Object {
    "filter": Object {
      "op": "BooleanLiteral",
      "value": true,
    },
    "op": "FilterProc",
  },
  "space": "corelight",
  "span": Object {
    "dur": Object {
      "ns": 0,
      "sec": 1800,
    },
    "ts": Object {
      "ns": 732000000,
      "sec": 1428915884,
    },
  },
}
`;

exports[`Debug and search helpers write invalid search into Debug Query shows reasonable error 1`] = `"SyntaxError: Expected \\"=\\", [0-9.], [A-Za-z_$], or whitespace but \\"(\\" found."`;

exports[`Debug and search helpers write new search into Debug Query shows AST 1`] = `
Object {
  "op": "SequentialProc",
  "procs": Array [
    Object {
      "filter": Object {
        "comparator": "eql",
        "field": Object {
          "field": "_path",
          "op": "FieldRead",
        },
        "op": "CompareField",
        "value": Object {
          "type": "string",
          "value": "x509",
        },
      },
      "op": "FilterProc",
    },
    Object {
      "duration": Object {
        "seconds": 86400,
        "type": "Duration",
      },
      "keys": Array [
        "certificate.version",
      ],
      "op": "GroupByProc",
      "reducers": Array [
        Object {
          "op": "Count",
          "var": "count",
        },
      ],
    },
    Object {
      "fields": Array [
        "ts",
        "certification.version",
      ],
      "op": "SortProc",
      "sortdir": 1,
    },
  ],
}
`;
